# HausdorffDistance

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
build2/: CMakeCache.txt  Makefile  aaa  cmake_install.cmake  run.sh
build2/src/: Makefile  cmake_install.cmake
expr/: auto_tune.sh  common.sh  cuspatial_hd.py  debug.py  decimate.py  running_time.sh  sql.py  tangent_circle.py  train.py  tree.dot  tree_numpointspercell_3d.h  vary_params.sh  visualize.py
expr/analysis/: histo.py  run.sh
expr/draw/: common.py  draw_cull.py  draw_cut_off.py  draw_mri.py  draw_running_time.py  draw_scalability.py  requirements.txt
expr/draw/hit_analysis/: histo.py  iter_1  iter_2
expr/for_the_paper/: common.sh  count_points.py  data_gen.sh  draw_common.py  eb_perf.py  effective_autotune.sh  effective_autoune.py  gen_train.sh  generator.py  interface_HD.py  intro.py  intro.sh  medvoxel.py  rt_analysis.py  rt_analysis.sh  run_monai.py  running_time.py  scalability.py  scalability.sh  sec1_and_2.sh  sec3.py  sec3.sh  sql.py  train.py
expr/for_the_paper/logs/intro/: eb_cpu_translate_0.01.json  eb_cpu_translate_0.02.json  eb_cpu_translate_0.03.json  eb_cpu_translate_0.04.json  eb_cpu_translate_0.05.json  eb_cpu_translate_0.06.json  eb_cpu_translate_0.07.json  eb_cpu_translate_0.08.json  eb_cpu_translate_0.09.json  eb_cpu_translate_0.10.json  nn_cpu_translate_0.01.json  nn_cpu_translate_0.02.json  nn_cpu_translate_0.03.json  nn_cpu_translate_0.04.json  nn_cpu_translate_0.05.json  nn_cpu_translate_0.06.json  nn_cpu_translate_0.07.json  nn_cpu_translate_0.08.json  nn_cpu_translate_0.09.json  nn_cpu_translate_0.10.json
expr/for_the_paper/logs/run_all/compare_rt/rt/: dragon.ply_asian_dragon.ply.json  dragon.ply_happy_buddha.ply.json  thai_statuette.ply_asian_dragon.ply.json  thai_statuette.ply_happy_buddha.ply.json
expr/for_the_paper/logs/run_all/compare_rt/rt_eb/: dragon.ply_asian_dragon.ply.json  dragon.ply_happy_buddha.ply.json  thai_statuette.ply_asian_dragon.ply.json  thai_statuette.ply_happy_buddha.ply.json
expr/for_the_paper/logs/run_all/compare_rt/rt_grid/: dragon.ply_asian_dragon.ply.json  dragon.ply_happy_buddha.ply.json  thai_statuette.ply_asian_dragon.ply.json  thai_statuette.ply_happy_buddha.ply.json
expr/for_the_paper/logs/run_all/compare_rt/rt_hdist/: dragon.ply_asian_dragon.ply.json  dragon.ply_happy_buddha.ply.json  thai_statuette.ply_asian_dragon.ply.json  thai_statuette.ply_happy_buddha.ply.json
expr/for_the_paper/logs/run_all/compare_rt/rt_prune/: dragon.ply_asian_dragon.ply.json  dragon.ply_happy_buddha.ply.json  thai_statuette.ply_asian_dragon.ply.json  thai_statuette.ply_happy_buddha.ply.json
expr/for_the_paper/logs/run_all/compare_rt_bak/rt/: dragon.ply_asian_dragon.ply.json  dragon.ply_happy_buddha.ply.json  thai_statuette.ply_asian_dragon.ply.json  thai_statuette.ply_happy_buddha.ply.json
expr/for_the_paper/logs/run_all/compare_rt_bak/rt_eb/: dragon.ply_asian_dragon.ply.json  dragon.ply_happy_buddha.ply.json  thai_statuette.ply_asian_dragon.ply.json
expr/for_the_paper/logs/run_all/compare_rt_bak/rt_grid/: dragon.ply_happy_buddha.ply.json
expr/for_the_paper/logs/run_all/compare_rt_bak/rt_hdist/: dragon.ply_happy_buddha.ply.json  thai_statuette.ply_happy_buddha.ply.json
expr/for_the_paper/logs/run_all/eb_gpu/BraTS2020_TrainingData/: BraTS20_Training_002_seg.nii_BraTS20_Training_004_seg.nii.json  BraTS20_Training_002_t1ce.nii_BraTS20_Training_273_t2.nii.json  BraTS20_Training_003_seg.nii_BraTS20_Training_193_t2.nii.json  BraTS20_Training_003_t2.nii_BraTS20_Training_005_seg.nii.json  BraTS20_Training_005_t1.nii_BraTS20_Training_148_flair.nii.json  (+495 more)
expr/for_the_paper/logs/run_all/rt_analysis/: max_hit_1.json  max_hit_1024.json  max_hit_128.json  max_hit_16.json  max_hit_256.json  max_hit_32.json  max_hit_512.json  max_hit_64.json  translate_0.01.json  translate_0.02.json  translate_0.03.json  translate_0.04.json  translate_0.05.json  translate_0.07.json  translate_0.08.json
src/: CMakeLists.txt  autotune_hausdorff_distance.cu  autotune_hausdorff_distance.cuh  distance.h  flags.cc  flags.h  grid.h  hausdorff_distance.h  hausdorff_distance_branch_n_bound.h  hausdorff_distance_cpu.h  hausdorff_distance_gpu.h  hausdorff_distance_itk.h  hausdorff_distance_lbvh.h  hausdorff_distance_nn.h  hausdorff_distance_rt.h  hd_bounds.h  img_loader.h  input_type.h  main.cpp  mbr.h  morton_code.h  move_points.h  play.cu  play.cuh  point.h  run_config.h  run_hausdorff_distance.cu  run_hausdorff_distance.cuh  running_stats.h  sampler.h  wkt_loader.h
src/geoms/: distance.h  hd_bounds.h  mbr.h
src/hd_impl/: hausdorff_distance_branch_n_bound.h  hausdorff_distance_compare_methods.h  hausdorff_distance_early_break.h  hausdorff_distance_hybrid.h  hausdorff_distance_itk.h  hausdorff_distance_nearest_neighbor_search.h  hausdorff_distance_ray_tracing.h  hausdorff_distance_rt_hdist.h  primitive_utils.h
src/index/: kd_tree.h  octree.h  quantized_grid.h  uniform_grid.h
src/kdtree/: kd_tree_helpers.h  labeled_point.h
src/lbvh/lbvh/: aabb.cuh  bvh.cuh  predicator.cuh  query.cuh
src/loaders/: img_loader.h  loader.h  ply_loader.h  translate_points.h
src/models/: .tree_maxhit_3d.h  features.h  tree_ebonlythreshold_3d.h  tree_maxhit_3d.h  tree_maxhitinit_3d.h  tree_maxhitnext_3d.h  tree_numpointspercell_3d.h  tree_sample_rate.h  tree_samplerate_3d.h
src/rt/: launch_parameters.h  reusable_buffer.h  rt_engine.h  sbt_record.h
src/rt/shaders/: shaders_cull_2d.cu  shaders_nn_2d.cu  shaders_nn_3d.cu  shaders_nn_compress_2d.cu  shaders_nn_compress_3d.cu  shaders_nn_grid_2d.cu  shaders_nn_multicast_2d.cu  shaders_nn_quantized_grid_2d.cu  shaders_nn_quantized_grid_3d.cu  shaders_nn_randomcast_2d.cu  shaders_nn_tensor_2d.cu  shaders_nn_triangle_2d.cu  shaders_nn_uniform_grid_2d.cu  shaders_nn_uniform_grid_3d.cu  shaders_overlap_uniform_grid_2d.cu  shaders_overlap_uniform_grid_3d.cu  shaders_play.cu  shaders_sphere_2d.cu
src/utils/: array_view.h  bitset.h  exception.h  helpers.h  launcher.h  markers.h  queue.h  shared_value.h  stopwatch.h  stream.h  type_traits.h  util.h
(+26790 files in other folders)
